--- a/index.ipynb
+++ b/index.ipynb
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "im"
+    "import networkx as nx"
    ]
   },
   {
