Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_c"
+   ]
   },
   {
    "cell_type": "markdown",
