--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "graph"
+   ]
   },
   {
    "cell_type": "markdown",
