Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -260,10 +260,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for row in df.index:\n",
+    "    user = df['user_id'][row]\n",
+    "    u_name = names[user]\n",
+    "    biz = df['business_id'][row]\n",
+    "    b_name = names[biz]\n",
+    "    G.add_edge(u_name, b_name)"
+   ]
   },
   {
    "cell_type": "code",
