Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "%matplotlib inline\n",
+    "nx.draw(G, with_labels=True, alpha=.7, font_size=6, node_size=500, node_color=node_color)"
    ]
   },
   {
