Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -315,7 +315,10 @@
    "source": [
     "#Your code here\n",
     "%matplotlib inline\n",
-    "nx.draw(G, with_labels=True, alpha=.7, font_size=6, node_size=500, node_color=node_color)"
+    "nx.draw(G, with_labels=True, alpha=.7, font_size=6, node_size=500,\n",
+    "        node_color=node_color)\n",
+    "\n",
+    "\n"
    ]
   },
   {
