--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,10 @@
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "names = {}\n",
+    "node"
+   ]
   },
   {
    "cell_type": "code",
