--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "enumerate(df.us)"
+   ]
   },
   {
    "cell_type": "markdown",
