--- a/index.ipynb
+++ b/index.ipynb
@@ -226,11 +226,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<enumerate at 0x7fded6df4a68>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "enumerate(df.us)"
+    "enumerate(df.user_id.unique())"
    ]
   },
   {
