Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,22 +226,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<enumerate at 0x7fded6df4a68>"
+       "<enumerate at 0x7fded6d18168>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "enumerate(df.user_id.unique())"
+    "i = enumerate(df.user_id.unique())\n",
+    "i"
    ]
   },
   {
