--- a/index.ipynb
+++ b/index.ipynb
@@ -225,6 +225,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.user_id."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
