Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,11 +226,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['J3I2NClEbD1Xr8lOdjxlqQ', '64YY0h0ZAR2nbzxbx0IwJg',\n",
+       "       'Ypz7hxOCnrg8Y8vxHJU-sQ', 'nDBly08j5URmrHQ2JCbyiw',\n",
+       "       '8qSr4B1NJL99rlylewUjOw', 'V1k7XMUX4qHVUi-3IUYzhA',\n",
+       "       'w225lKHnX3jorkSXWgss0Q', 'JffajLV-Dnn-eGYgdXDxFg',\n",
+       "       'wLuDGMXytNVTF8ZU2gwUEQ', 'X_kPh3nt0AJPNPHye2rTlA',\n",
+       "       'xkTbpCc-YhU8-EXZDA7u0g', '3SIjo6vQIvxwHKEpIHfaBg',\n",
+       "       'APLIPfq1Rf8QyhHHk2uAyA', 'SW5RpjVtyMhxdzuA8dOdYA',\n",
+       "       '-OMlS6yWkYjVldNhC31wYg', 'nSLrExcVVphiNzvSf5H7vA',\n",
+       "       '-txH2zJSBZQHO6RWvoWXuQ', 'yy8vNTtESId44OcGyaVnbw',\n",
+       "       'ehtcnF3Ebvq23p107LcsuA', 'XMEBJp8mmpz3vsSkvg9T9Q',\n",
+       "       'tiyg_cQaPdUuSG95Xpi_sA', 'd1zJj49Q5ikgvqQX0534RQ',\n",
+       "       'vhAn390OgR1H4DwacJdc7w', 'Lmgv46LyI1PlLs0KNIfYFQ',\n",
+       "       'ryjqXdp68i2I9JPOpX9URw', 'W_QXYA7A0IhMrvbckz7eVg',\n",
+       "       'clTYUJCL-rHnVIS2WePRwA', 'k1ACFw3wmqkNGoiGeNLc0w',\n",
+       "       'fev0iI-XDrteD4SYRKjiUw', 'cg4em4uXe5ab5qH7pB01gg',\n",
+       "       'XqU1PB0XWjcr3sUyZZGaWQ', 'XLah_ynCwwYshCY9jc13tw',\n",
+       "       'q5nFaw9isjD_01PpVAR7hg', 'B_leEp0XWSNi5_HQ_BLAAg',\n",
+       "       'n_lAaNGeWgspbbCJc0DqRg', 'XY_bQqhZfyyEi_W5n4kQNg',\n",
+       "       'ZmIgP4U4Ht9CYmNX0_zP6w', 'P2vHl_ZzSzeu07W29KsKgg',\n",
+       "       '3ONPPazUH-Q3XblYJIaA1A', 'NPoOEAPspruMOik-9sKQtQ',\n",
+       "       'sLuaWOJNALukrThYzqovzA', 'm59OpbCyRwXSvERXeevWqg',\n",
+       "       'o33IBagNFxdJhIrRTl691Q', 'hebXGQk5ggZSwTlUoEcTWQ',\n",
+       "       'tdoL4Un5_hy_rJxEFLLOjw', 'zqnAdayPsak5dbLF2gEvNw',\n",
+       "       'W9h1ufjEzDp7THyAqRw65g', 'jdeNI5TTTuM6mj3HTgstRA',\n",
+       "       'oRRHrcRPcEAnOepF3KPfsg', 'M6oU3OBf_E6gqlfkLGlStQ',\n",
+       "       'bBS2Qsf--DYRXbYe5q4CcQ', '2y3LWFfyRp02EdjwcVv7sw',\n",
+       "       'O758lrR1X2zI-ySeyjdr6A', '7o7MF9B9lxcWupE8jiLOaQ',\n",
+       "       'OksbhhgC71Ary3zNHMypeQ', '7zDqr2I0-xpw9HF5Ha54cA',\n",
+       "       'o2CGc1kQHEFkYOECM3NFdg', 'ai2W745a8wrLHJr7TY0FCA',\n",
+       "       'kq5Pdsy8Znyh9KEkxWT_QA', 'Cj6tGJrLEdN35H9cR6b8Lw',\n",
+       "       'wDAAn0HlnuZQnfga6CVIKQ', 'n4PmRYAvx2c6X0-fb9mT9Q',\n",
+       "       '2tyadgcxcaEu5LWgLdwLAQ'], dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.user_id."
+    "df.user_id.unique()"
    ]
   },
   {
