Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,8 @@
    "source": [
     "names = {}\n",
     "node_color = []\n",
-    "\n"
+    "\n",
+    "for n, person in enumerate()"
    ]
   },
   {
