Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,8 @@
     "names = {}\n",
     "node_color = []\n",
     "\n",
-    "for n, person in enumerate()"
+    "for n, person in enumerate(df.user_id.unique()):\n",
+    "    "
    ]
   },
   {
