Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
     "node_color = []\n",
     "\n",
     "for n, person in enumerate(df.user_id.unique()):\n",
-    "    "
+    "    name = 'User'"
    ]
   },
   {
