--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,9 @@
     "for n, person in enumerate(df.user_id.unique()):\n",
     "    name = 'User{}'.format(n)\n",
     "    names[person] = name\n",
-    "    G.add"
+    "    G.add_node(name)\n",
+    "    node_color.append('red')\n",
+    "for n, biz in enumerate"
    ]
   },
   {
