Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,8 @@
     "    names[person] = name\n",
     "    G.add_node(name)\n",
     "    node_color.append('red')\n",
-    "for n, biz in enumerate"
+    "for n, biz in enumerate(df.business_id.unique()):\n",
+    "    name = 'Business{}'"
    ]
   },
   {
