Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,10 @@
     "    G.add_node(name)\n",
     "    node_color.append('red')\n",
     "for n, biz in enumerate(df.business_id.unique()):\n",
-    "    name = 'Business{}'"
+    "    name = 'Business{}'.format(n)\n",
+    "    names[biz] = name\n",
+    "    G.add_node(name)\n",
+    "    node_color.append('blue')"
    ]
   },
   {
