--- a/index.ipynb
+++ b/index.ipynb
@@ -249,22 +249,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "for row in df.index:\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=76, step=1)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.index"
+   ]
   },
   {
    "cell_type": "markdown",
