Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -245,13 +245,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "for row in df.index:\n",
     "    df['user_id'][row]\n",
-    "    \n",
+    "    u_name = names[user]\n",
+    "    biz = df['business_id'][row]\n",
+    "    b_name = names[biz]\n",
+    "    G.add_edge(u_name, b_name)\n",
     "    "
    ]
   },
