Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "%matplotlib inline\n",
+    "nx.draw(G)\n",
     "\n"
    ]
   },
